DigicielFull/force-app/main/default/objects/amc__Change_Request__c/amc__Change_Request__c.object-meta.xml
<CustomObject>
    <label>Change Request</label>
    <nameField>
        <label>Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>