DigicielFull/force-app/main/default/objects/amc__Change_Request__c/fields/amc__Adjust_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Adjust_Opportunity_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE if you wish the Opportunity Amount to be amended by the value of the Change Amount</description>
    <inlineHelpText>Set to TRUE if you wish the Opportunity Amount to be amended by the value of the Change Amount</inlineHelpText>
    <label>Adjust Opportunity Amount</label>
    <type>Checkbox</type>
</CustomField>