DigicielFull/force-app/main/default/objects/amc__Change_Request__c/fields/amc__Adjust_Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>amc__Adjust_Project_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE if you wish the Project Budget to be amended by the value of the Change Amount</description>
    <inlineHelpText>Set to TRUE if you wish the Project Budget to be amended by the value of the Change Amount</inlineHelpText>
    <label>Adjust Project Budget</label>
    <type>Checkbox</type>
</CustomField>