DigicielFull/force-app/main/default/objects/amc__Change_Request__c/fields/amc__Change_Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Change_Amount__c</fullName>
    <description>Identifies the amount the Project Budget will be changed by</description>
    <inlineHelpText>Identifies the amount the Project Budget will be changed by</inlineHelpText>
    <label>Change Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>