DigicielFull/force-app/main/default/objects/amc__Change_Request__c/fields/amc__Impact__c.field-meta.xml
<CustomField>
    <fullName>amc__Impact__c</fullName>
    <description>Identifies the expected impact on the project</description>
    <inlineHelpText>Identifies the expected impact on the project</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>